# DotNetCorePlugin

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  simpleCoreCLRHost.cpp  utils.hpp
CoreCLRHost/: CMakeLists.txt
CoreCLRHost/include/: CoreCLRHost.hpp  dll_export.hpp
CoreCLRHost/src/: CoreCLRHost.cpp  coreclr.cpp
Managed/: CMakeLists.txt  IPlugin.cs  Managed.cs  Managed.csproj  PluginManager.cs  PluginManagerInterop.cs  Singleton.cs  Trivial.cs  TrivialInterop.cs  UnmanagedPlugin.cs
ManagedAPI/: CMakeLists.txt  ManagedAPI.csproj
ManagedPlugin/: CMakeLists.txt  ManagedPlugin.cs  ManagedPlugin.csproj
ManagedPluginAPI/: CMakeLists.txt  IPlugin.cs  ManagedPluginAPI.csproj  PluginAttribute.cs  Singleton.cs
NativeDllPlugin/: CMakeLists.txt
NativeDllPlugin/src/: NativeDllPlugin.cpp  dll_export.hpp
NativePlugin/: CMakeLists.txt
NativePlugin/src/: IPlugin.hpp
NativePluginAPI/: CMakeLists.txt  NativePluginAPIWrapper.cs
NativePluginAPI/include/: IPlugin.hpp
NativePluginAPI/src/: IPlugin.cpp
SimpleCoreCLRHost/: CMakeLists.txt
SimpleCoreCLRHost/src/: coreclr.cpp  coreclr.hpp  coreclr_prototypes.hpp  dll_export.hpp  dll_plugin.hpp  filesystem_utils.hpp  interop_class.hpp  main.cpp  native_plugin.hpp  simpleCoreCLRHost.cpp  simpleCoreCLRHost.hpp
SimplePluginFramework/: CMakeLists.txt
SimplePluginFramework/src/: CorePlugin.hpp  dotnetcore_runtime.hpp  exec.hpp  main.cpp
cmake/: add_cppsharp_project.cmake  cxx_filesystem.cmake  cxx_filesystem.cpp  generate_plugin_wrapper.cmake  update_directory.cmake
dependencies/: CMakeLists.txt  Makefile
src/: CMakeLists.txt  coreclr.cpp  coreclr.hpp  filesystem_utils.hpp  interop_class.hpp  main.cpp  simpleCoreCLRHost.cpp  simpleCoreCLRHost.hpp
src/Managed/: Managed.cs
